samples/_failures_safe/1761042743_6a97ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6d0632c.c: In function ‘main’:
./samples/SAFE/__tmp_c6d0632c.c:179:5: error: expected expression at end of input
  179 |     if (
      |     ^~
./samples/SAFE/__tmp_c6d0632c.c:179:5: error: expected declaration or statement at end of input
